Fix or exclude a bunch of FindBugs errors. Upgrade to the latest version of the FindBugs plugin.